--- a/locale/en.json
+++ b/locale/en.json
@@ -41,5 +41,6 @@
     "gui_please_wait": "Please wait...",
     "error_hs_dir_cannot_create": "Cannot create hidden service dir {0:s}",
     "error_hs_dir_not_writable": "Hidden service dir {0:s} is not writable",
-    "using_ephemeral": "Staring ephemeral Tor hidden service and awaiting publication"
+    "using_ephemeral": "Staring ephemeral Tor hidden service and awaiting publication",
+    "error_rate_limit": "An attacker might be trying to guess your URL. To prevent this, OnionShare has automatically stopped the server. To share the files you must start it again and share the new URL."
 }
